# karapace

./: .gitignore  CHANGELOG.md  CI_CONTRACT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/actions/karapace-build/: action.yml
.github/workflows/: ci.yml  release.yml  supply-chain-test.yml
crates/karapace-cli/: Cargo.toml  karapace-cli.cdx.json
crates/karapace-cli/src/: main.rs
crates/karapace-cli/src/commands/: archive.rs  build.rs  commit.rs  completions.rs  destroy.rs  diff.rs  doctor.rs  enter.rs  exec.rs  freeze.rs  gc.rs  inspect.rs  list.rs  man_pages.rs  migrate.rs  mod.rs  new.rs  pin.rs  pull.rs  push.rs  rebuild.rs  rename.rs  restore.rs  snapshots.rs  stop.rs  tui.rs  verify_store.rs
crates/karapace-cli/tests/: cli_integration.rs
crates/karapace-core/: Cargo.toml  karapace-core.cdx.json
crates/karapace-core/benches/: engine_benchmarks.rs
crates/karapace-core/src/: concurrency.rs  drift.rs  engine.rs  lib.rs  lifecycle.rs
crates/karapace-core/tests/: crash.rs  e2e.rs  enospc.rs  integration.rs
crates/karapace-dbus/: Cargo.toml  karapace-dbus.cdx.json
crates/karapace-dbus/src/: interface.rs  lib.rs  main.rs  service.rs
crates/karapace-remote/: Cargo.toml  karapace-remote.cdx.json
crates/karapace-remote/src/: config.rs  http.rs  lib.rs  registry.rs  transfer.rs
crates/karapace-runtime/: Cargo.toml  karapace-runtime.cdx.json
crates/karapace-runtime/src/: backend.rs  export.rs  host.rs  image.rs  lib.rs  mock.rs  namespace.rs  oci.rs  prereq.rs  sandbox.rs  security.rs  terminal.rs
crates/karapace-schema/: Cargo.toml  karapace-schema.cdx.json
crates/karapace-schema/src/: identity.rs  lib.rs  lock.rs  manifest.rs  normalize.rs  preset.rs  types.rs
crates/karapace-server/: Cargo.toml  karapace-server.cdx.json
crates/karapace-server/src/: lib.rs  main.rs
crates/karapace-server/tests/: http_e2e.rs
crates/karapace-store/: Cargo.toml  karapace-store.cdx.json
crates/karapace-store/src/: gc.rs  integrity.rs  layers.rs  layout.rs  lib.rs  metadata.rs  migration.rs  objects.rs  wal.rs
crates/karapace-store/tests/: migration.rs
crates/karapace-tui/: Cargo.toml  karapace-tui.cdx.json
crates/karapace-tui/src/: app.rs  lib.rs  ui.rs
data/dbus/: org.karapace.Manager1.service
data/systemd/: karapace-dbus.service
docs/: api-reference.md  architecture.md  build-and-reproducibility.md  cli-reference.md  cli-stability.md  contributing.md  e2e-testing.md  getting-started.md  hash-contract.md  layer-limitations-v1.md  lock-spec.md  manifest-spec.md  protocol-v1.md  security-model.md  storage-format.md  store-spec.md  verification.md  versioning-policy.md
examples/: dev.toml  gui-dev.toml  minimal.toml  rust-dev.toml  ubuntu-dev.toml
scripts/: generate-sbom.sh
