[package]
name = "karapace-schema"
description = "Manifest parsing, normalization, identity hashing, and lock file for Karapace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
blake3.workspace = true
tempfile.workspace = true
