[package]
name = "karapace-server"
description = "Reference HTTP server for the Karapace remote protocol v1"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tiny_http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
ureq.workspace = true
karapace-remote = { path = "../karapace-remote" }
karapace-store = { path = "../karapace-store" }
