[package]
name = "karapace-store"
description = "Content-addressable store, metadata, layers, GC, and integrity for Karapace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
fs2.workspace = true
chrono.workspace = true
tar.workspace = true
tracing.workspace = true
karapace-schema = { path = "../karapace-schema" }

[dev-dependencies]
libc.workspace = true
